# karikari

./: .gitignore  CMakeLists.txt  README.md  TODO.md
docs/: PROGRESS.md
installer/: karikari.iss
res/: karikari.rc
src/: addressbar.cpp  addressbar.h  app.h  archive.cpp  archive.h  archive_utils.h  bookshelf.cpp  bookshelf.h  cache.cpp  cache.h  command.cpp  command.h  context_menu.cpp  context_menu.h  decoder.cpp  decoder.h  favorites.cpp  favorites.h  file_utils.h  filelist.cpp  filelist.h  fswatcher.cpp  fswatcher.h  help.cpp  help.h  history.cpp  history.h  hover_preview.cpp  hover_preview.h  i18n.cpp  i18n.h  karikari.manifest  main.cpp  media.cpp  media.h  nav.cpp  nav.h  nav_utils.h  navbar.cpp  navbar.h  (+19 more)
tests/: settings_testable.cpp  test_archive_utils.cpp  test_filelist.cpp  test_json.cpp  test_main.cpp  test_nav.cpp  test_settings.cpp  test_utils.cpp
